[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-crap"
]
local = [
    "ruff",
    "mypy",
    "prek",
    "skylos",
]

[tool.pytest.ini_options]
addopts = '-ra -vv'
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.mypy]
strict = true
exclude = ["^tests/"]

[tool.basedpyright]
ignore = [ "tests" ]

[tool.ruff]
unsafe-fixes = false
extend-include = ["*.md"]
extend-exclude = ["plans/"]

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC", "TC", "SIM", "PL", "TID", "PT", "PTH", "PERF"]
extend-ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "TID252"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TC"]

[tool.ruff.lint.flake8-type-checking]
strict = true
# include only if pydantic is a used dependency
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# include only if fastapi is a used dependency
runtime-evaluated-decorators = ["fastapi.APIRouter.post", "fastapi.APIRouter.put", "fastapi.APIRouter.delete", "fastapi.APIRouter.get"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"importlib.import_module".msg = "Do not dynamically import modules. Explicitly import them at the top of the file."
"__future__.annotations".msg = "The annotation future statement is disallowed."

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
preview = true

[tool.skylos]
nesting = 4
exclude = ["tests", ".ruff_cache"]
ignore = ["SKY-L027", "SKY-Q701", "SKY-Q802", "SKY-Q803"]

[tool.skylos.gate]
strict = true

[tool.uv.build-backend]
# update for the library name
module-name = "xvalidations"
module-root = ""

# include only if this is a library
[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
